--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,13 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
-	
+
 	<modules>
 		<module>jpa-entities</module>
 		<module>from-eclipse</module>
 		<module>web-api</module>
+		<module>web-app</module>
+		<module>converters</module>
 	</modules>
 
 	<properties>
