--- a/converters/pom.xml
+++ b/converters/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>guru.springframework</groupId>
 		<artifactId>mb2g-mm-maven-aev</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>${revision}</version>
 	</parent>
 	<artifactId>converters</artifactId>
 
@@ -17,12 +17,12 @@
 		<dependency>
 			<groupId>guru.springframework</groupId>
 			<artifactId>jpa-entities</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>guru.springframework</groupId>
 			<artifactId>web-api</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mapstruct</groupId>
