--- a/from-eclipse/pom.xml
+++ b/from-eclipse/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>guru.springframework</groupId>
 		<artifactId>mb2g-mm-maven-aev</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>${revision}</version>
 	</parent>
 	<artifactId>from-eclipse</artifactId>
 	<packaging>jar</packaging>
