--- a/jpa-entities/pom.xml
+++ b/jpa-entities/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>guru.springframework</groupId>
 		<artifactId>mb2g-mm-maven-aev</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>${revision}</version>
 	</parent>
 
 	<artifactId>jpa-entities</artifactId>
