--- a/web-api/pom.xml
+++ b/web-api/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>guru.springframework</groupId>
 		<artifactId>mb2g-mm-maven-aev</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>${revision}</version>
 	</parent>
 
 	<properties>
